force-app/src/objects/c2g__codaTransaction__c.object
<CustomObject>
    <customHelpPage>c2g__codahelptransaction</customHelpPage>
    <description>Holds header information about a transaction.</description>
    <fields>
        <fullName>CTCM__InvoiceDueDate__c</fullName>
        <formula>IF(NOT(ISBLANK(c2g__SalesInvoice__c)),c2g__SalesInvoice__r.c2g__DueDate__c, 
IF(NOT(ISBLANK(c2g__BillingDocument__c)),c2g__BillingDocument__r.fferpcore__DocumentDueDate__c
,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstandingTotal__c</fullName>
        <label>Account Outstanding Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__AccountOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTotal__c</fullName>
        <label>Account Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__AccountValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountingBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Accounting Book.</description>
        <label>Accounting Book</label>
        <referenceTo>c2g__AccountingBook__c</referenceTo>
        <relationshipLabel>Accounting Book</relationshipLabel>
        <relationshipName>TransactionAccountingBook</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocation</label>
        <referenceTo>c2g__Allocation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ArchiveSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Archive Set</label>
        <referenceTo>c2g__ArchiveSet__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AvalaraIntegrationStatus__c</fullName>
        <description>Stores the current status of transaction.</description>
        <inlineHelpText>Stores Avalara VAT Reporting status of transaction.</inlineHelpText>
        <label>Avalara Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excluded</fullName>
                </value>
                <value>
                    <fullName>FF Error</fullName>
                </value>
                <value>
                    <fullName>Ready for Sending</fullName>
                </value>
                <value>
                    <fullName>Repo Error</fullName>
                </value>
                <value>
                    <fullName>Sent to Avalara</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AvalaraVATReportingStatus__c</fullName>
        <description>Status of sending the transaction to Avalara VAT Reporting.</description>
        <inlineHelpText>Status of sending the transaction to Avalara VAT Reporting.</inlineHelpText>
        <label>Avalara VAT Reporting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready for Sending</fullName>
                </value>
                <value>
                    <fullName>Ready for Sending</fullName>
                </value>
                <value>
                    <fullName>Sending Failed</fullName>
                </value>
                <value>
                    <fullName>Sent to Avalara VAT Reporting</fullName>
                </value>
                <value>
                    <fullName>Validation Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BillingDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the billing document to which this transaction relates</description>
        <inlineHelpText>Lookup to the billing document to which this transaction relates</inlineHelpText>
        <label>Billing Document</label>
        <referenceTo>fferpcore__BillingDocument__c</referenceTo>
        <relationshipLabel>Accounting Transaction</relationshipLabel>
        <relationshipName>AccountingTransaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Credits__c</fullName>
        <label>Home Credits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation</label>
        <referenceTo>c2g__codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Debits__c</fullName>
        <label>Home Debits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentDescription__c</fullName>
        <label>Document Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentNumber__c</fullName>
        <label>Document Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingTotal__c</fullName>
        <label>Document Outstanding Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentOutstandingValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference2__c</fullName>
        <label>Document Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTotal__c</fullName>
        <label>Document Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__AccountRollup__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentValueTotal__c</fullName>
        <label>Document Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DocumentValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualCredits__c</fullName>
        <label>Dual Credits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__DualValue__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualDebits__c</fullName>
        <label>Dual Debits</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__DualValue__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DualValueTotal__c</fullName>
        <label>Dual Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__DualValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__HierarchyReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Consolidation Hierarchy from the Transaction object.</description>
        <label>Hierarchy Reference</label>
        <referenceTo>c2g__ConsolidationHierarchy__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HomeCredits__c</fullName>
        <formula>IF(c2g__Credits__c &lt; 0, c2g__Credits__c * -1, c2g__Credits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the total of credit values in home currency, displayed without a minus sign.</inlineHelpText>
        <label>Home Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValueTotal__c</fullName>
        <label>Home Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__HomeValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Transactions (Invoice Group)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineCount__c</fullName>
        <label>Line Count</label>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <label>MatchType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OriginalTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Reverse Transaction)</relationshipLabel>
        <relationshipName>OriginalTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the financial period of the reporting company.</description>
        <label>Reporting Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Reporting Transactions</relationshipLabel>
        <relationshipName>ReportingTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportingValueTotal__c</fullName>
        <label>Reporting Value Total</label>
        <summarizedField>c2g__codaTransactionLineItem__c.c2g__ReportingValue__c</summarizedField>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseReason__c</fullName>
        <label>Reverse Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transactions (Original Transaction)</relationshipLabel>
        <relationshipName>ReverseTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SequentialTransactionNumber__c</fullName>
        <description>Stores a generated sequence number for the transaction, allowing you to order transactions by company.</description>
        <label>Sequential Transaction Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxLineActiveCount__c</fullName>
        <description>The number of Tax lines of interest to Avalara.</description>
        <label>Number of Tax Lines</label>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__IsWithholdingTax__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TaxLineCount__c</fullName>
        <description>The number of document lines with a Type of Tax.</description>
        <label>Number of Tax Lines</label>
        <summaryFilterItems>
            <field>c2g__codaTransactionLineItem__c.c2g__LineType__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaTransactionLineItem__c.c2g__Transaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionType__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Purchase Invoice</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Purchase Credit Note</fullName>
                </value>
                <value>
                    <fullName>Cash Matching Journal</fullName>
                </value>
                <value>
                    <fullName>Currency Revaluation</fullName>
                </value>
                <value>
                    <fullName>Year End Journal</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VendorDocumentNumber__c</fullName>
        <label>Vendor Document Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcmutil__TransactionTypeText__c</fullName>
        <formula>TEXT(c2g__TransactionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type - Text</label>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaTransaction</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionType__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__HomeValueTotal__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>c2g__AllocationTransactions</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionType__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__HomeValueTotal__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__TransactionType__c</field>
            <operation>equals</operation>
            <value>Allocation</value>
        </filters>
        <label>Allocation Transactions</label>
    </listViews>
    <listViews>
        <fullName>c2g__EliminationTransactions</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__DocumentDescription__c</columns>
        <columns>c2g__ReverseTransaction__c</columns>
        <columns>c2g__ReverseReason__c</columns>
        <columns>c2g__OriginalTransaction__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__TransactionType__c</field>
            <operation>equals</operation>
            <value>Elimination</value>
        </filters>
        <label>Elimination Transactions</label>
    </listViews>
    <listViews>
        <fullName>c2g__TransactionsWithoutHierarchyReference</fullName>
        <columns>NAME</columns>
        <columns>c2g__TransactionType__c</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__HomeValueTotal__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__HierarchyReference__c</field>
            <operation>equals</operation>
        </filters>
        <label>Transactions without hierarchy reference</label>
    </listViews>
    <listViews>
        <fullName>ffaws__JournalsPostedLast30DaysListView</fullName>
        <columns>c2g__Journal__c</columns>
        <columns>c2g__TransactionType__c</columns>
        <columns>NAME</columns>
        <columns>c2g__TransactionDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__IncomeScheduleGroup__c</columns>
        <columns>c2g__Credits__c</columns>
        <columns>c2g__Debits__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__TransactionType__c</field>
            <operation>equals</operation>
            <value>Journal</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:29</value>
        </filters>
        <label>Posted in the Last 30 Days</label>
    </listViews>
    <nameField>
        <displayFormat>TRN{00000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>